apps/keycloak/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pv-pod
  namespace: kingdon
spec:
  volumes:
    - name: test-pv-storage
      persistentVolumeClaim:
        claimName: influxdb-volume
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: test-pv-storage
