apps/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: production
  annotations:
    something-else: a different annotation
spec:
  ingressClassName: internal
  rules:
  - host: not-keycloak.hephy.pro
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak
              port:
                number: 8080
